kubeflow/kfapps/persistent-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ml-pipeline-persistenceagent
    app.kubernetes.io/component: persistent-agent
    app.kubernetes.io/instance: persistent-agent-0.2.5
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: persistent-agent
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: 0.2.5
  name: ml-pipeline-persistenceagent
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: ml-pipeline-persistenceagent
      app.kubernetes.io/component: persistent-agent
      app.kubernetes.io/instance: persistent-agent-0.2.5
      app.kubernetes.io/managed-by: kfctl
      app.kubernetes.io/name: persistent-agent
      app.kubernetes.io/part-of: kubeflow
      app.kubernetes.io/version: 0.2.5
  template:
    metadata:
      labels:
        app: ml-pipeline-persistenceagent
        app.kubernetes.io/component: persistent-agent
        app.kubernetes.io/instance: persistent-agent-0.2.5
        app.kubernetes.io/managed-by: kfctl
        app.kubernetes.io/name: persistent-agent
        app.kubernetes.io/part-of: kubeflow
        app.kubernetes.io/version: 0.2.5
    spec:
      containers:
      - env:
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: gcr.io/ml-pipeline/persistenceagent:0.2.5
        imagePullPolicy: IfNotPresent
        name: ml-pipeline-persistenceagent
      serviceAccountName: ml-pipeline-persistenceagent
