kubeflow/kfapps/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ml-pipeline
    app.kubernetes.io/component: api-service
    app.kubernetes.io/instance: api-service-0.2.5
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: api-service
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: 0.2.5
  name: ml-pipeline
  namespace: kubeflow
spec:
  ports:
  - name: http
    port: 8888
    protocol: TCP
    targetPort: 8888
  - name: grpc
    port: 8887
    protocol: TCP
    targetPort: 8887
  selector:
    app: ml-pipeline
    app.kubernetes.io/component: api-service
    app.kubernetes.io/instance: api-service-0.2.5
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: api-service
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: 0.2.5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ml-pipeline
    app.kubernetes.io/component: api-service
    app.kubernetes.io/instance: api-service-0.2.5
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: api-service
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: 0.2.5
  name: ml-pipeline
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: ml-pipeline
      app.kubernetes.io/component: api-service
      app.kubernetes.io/instance: api-service-0.2.5
      app.kubernetes.io/managed-by: kfctl
      app.kubernetes.io/name: api-service
      app.kubernetes.io/part-of: kubeflow
      app.kubernetes.io/version: 0.2.5
  template:
    metadata:
      labels:
        app: ml-pipeline
        app.kubernetes.io/component: api-service
        app.kubernetes.io/instance: api-service-0.2.5
        app.kubernetes.io/managed-by: kfctl
        app.kubernetes.io/name: api-service
        app.kubernetes.io/part-of: kubeflow
        app.kubernetes.io/version: 0.2.5
    spec:
      containers:
      - command:
        - apiserver
        - --config=/etc/ml-pipeline-config
        - --sampleconfig=/config/sample_config.json
        - -logtostderr=true
        image: gcr.io/ml-pipeline/api-server:0.2.5
        imagePullPolicy: IfNotPresent
        name: ml-pipeline-api-server
        ports:
        - containerPort: 8888
        - containerPort: 8887
        volumeMounts:
        - mountPath: /etc/ml-pipeline-config
          name: config-volume
      serviceAccountName: ml-pipeline
      volumes:
      - configMap:
          name: ml-pipeline-config
        name: config-volume
