kubeflow/kfapps/pipeline-visualization-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ml-pipeline-visualizationserver
    app.kubernetes.io/component: pipeline-visualization-service
    app.kubernetes.io/instance: pipeline-visualization-service-0.2.5
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: pipeline-visualization-service
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: 0.2.5
  name: ml-pipeline-ml-pipeline-visualizationserver
  namespace: kubeflow
spec:
  ports:
  - name: http
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: ml-pipeline-visualizationserver
    app.kubernetes.io/component: pipeline-visualization-service
    app.kubernetes.io/instance: pipeline-visualization-service-0.2.5
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: pipeline-visualization-service
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: 0.2.5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ml-pipeline-visualizationserver
    app.kubernetes.io/component: pipeline-visualization-service
    app.kubernetes.io/instance: pipeline-visualization-service-0.2.5
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: pipeline-visualization-service
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: 0.2.5
  name: ml-pipeline-ml-pipeline-visualizationserver
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: ml-pipeline-visualizationserver
      app.kubernetes.io/component: pipeline-visualization-service
      app.kubernetes.io/instance: pipeline-visualization-service-0.2.5
      app.kubernetes.io/managed-by: kfctl
      app.kubernetes.io/name: pipeline-visualization-service
      app.kubernetes.io/part-of: kubeflow
      app.kubernetes.io/version: 0.2.5
  template:
    metadata:
      labels:
        app: ml-pipeline-visualizationserver
        app.kubernetes.io/component: pipeline-visualization-service
        app.kubernetes.io/instance: pipeline-visualization-service-0.2.5
        app.kubernetes.io/managed-by: kfctl
        app.kubernetes.io/name: pipeline-visualization-service
        app.kubernetes.io/part-of: kubeflow
        app.kubernetes.io/version: 0.2.5
    spec:
      containers:
      - image: gcr.io/ml-pipeline/visualization-server:0.2.5
        imagePullPolicy: IfNotPresent
        name: ml-pipeline-visualizationserver
        ports:
        - containerPort: 8888
